--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="starter">
   <head>
         <meta charset="utf-8">
       <script src="js/app.js"></script>
@@ -12,20 +12,64 @@
         <script src="cordova.js"></script>
         <script src="js/app.js"></script>
     </head>
-<body ng-app="starter">
-    <ion-pane ng-controller="ExampleController">
-        <ion-header-bar class="bar-stable">
-            <button class="button" ng-click="getContactList()">Load</button>
-            <h1 class="title">Ionic Blank Starter</h1>
-            <button class="button" ng-click="createContact()">New</button>
-        </ion-header-bar>
-        <ion-content>
-            <ion-list>
-                <ion-item ng-repeat="contact in contacts">
-                    {{contact.displayName}}
-                </ion-item>
-            </ion-list>
+<body >
+    <ion-nav-bar class="bar-positive nav-title-slide-ios7" align-title="center">
+      <ion-nav-back-button class="button-icon ion-arrow-left-c">
+      </ion-nav-back-button>
+    </ion-nav-bar>
+
+    <ion-nav-view class="slide-left-right"></ion-nav-view>
+
+    <script id="index.html" type="text/ng-template">
+      <!-- The title of the ion-view will be shown on the navbar -->
+      <ion-view title="Lista Contatos" hide-back-button="true">
+        <ion-content class="padding">
+            <ion-pane ng-controller="ContatosCtrl">
+                <ion-header-bar class="bar-stable">
+                    <button class="button" ng-click="getContactList()">Load</button>
+                    <h1 class="title">Ionic Blank Starter</h1>
+                    <a class="button" ui-sref="new">New</a>
+                </ion-header-bar>
+                <ion-content>
+                    <ion-list>
+                        <ion-item ng-repeat="contact in contacts">
+                            <div ng-click="editContact()">
+                                {{contact.displayName}}
+                            </div>
+                        </ion-item>
+                    </ion-list>
+                </ion-content>
+            </ion-pane>
         </ion-content>
-    </ion-pane>
+      </ion-view>
+    </script>    
+
+    <script id="new.html" type="text/ng-template">
+      <!-- The title of the ion-view will be shown on the navbar -->
+      <ion-view title="Novo Contato">
+        <form ng-submit="createContact(contact)">
+            <div class="list" style="margin-top:50px">
+                Nome: <input type="text" name="fname" ng-model="contact.nome" placeholder="Nome"><br>
+                E-mail: <input type="text" name="email" ng-model="contact.email" placeholder="Email"><br>
+                Telefone <input type="number" name="telefone" ng-model="contact.telefone" placeholder="Telefone"><br>
+            </div>
+            <div class="padding">
+                <button type="submit" class="button button-block button-positive">Criar Contato</button>
+            </div>
+        </form>
+      </ion-view>
+    </script> 
+
+    <script id="edit.html" type="text/ng-template">
+      <!-- The title of the ion-view will be shown on the navbar -->
+      <ion-view title="Page 3">
+        <ion-content class="padding">
+          <!-- The content of the page -->
+          <a class="button" ui-sref="page1">Go To Page 1</a>
+          <a class="button" ui-sref="page2">Go To Page 2</a>
+        </ion-content>
+      </ion-view>
+    </script>     
+    
 </body>
 </html>
