--- a/www/index.html
+++ b/www/index.html
@@ -29,15 +29,13 @@
         <ion-content>
             <ion-list>
                 <ion-item ng-repeat="contact in contacts">
-                    <a class="item item-avatar" href="edit">
-                        <img src="{{contact.photos[0].value}}" ng-if="contact.photos.length > 0">
-                        <img src="img/user-avatar.png" ng-if="!contact.photos">
-                        <h2>{{contact.displayName}}</h2>
-                        <p>{{contact.phoneNumbers[0].value}}</p>
+                    <a class="item item-avatar item-icon-right">
+                        <img src="{{contact.photos[0].value}}" ng-if="contact.photos.length > 0" ng-click="editContact(contact)">
+                        <img src="img/user-avatar.png" ng-if="!contact.photos" ng-click="editContact(contact)">
+                        <h2 ng-click="editContact(contact)">{{contact.displayName}}</h2>
+                        <p ng-click="editContact(contact)">{{contact.phoneNumbers[0].value}}</p>
+                        <i class="icon ion-trash-a" ng-click="removeContact(contact)"></i>
                     </a>
-                    <!--<a class="item item-icon-rigth" href="#">
-                        <i class="icon ion-trash-a"></i>
-                    </a>-->
                 </ion-item>
             </ion-list>
         </ion-content>
