--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
     <ion-nav-view class="slide-left-right"></ion-nav-view>
     <script id="index.html" type="text/ng-template">
         <!-- The title of the ion-view will be shown on the navbar -->
-        <ion-view title="Contatos" hide-back-button="true" class="padding" ng-controller="ContatosCtrl">
+        <ion-view title="Contatos" hide-back-button="true" class="padding">
             <ion-header-bar class="bar-stable">
                 <button class="button" ng-click="getContactList()">Load</button>
                 <h1 class="title">Contatos</h1>
@@ -36,64 +36,7 @@
             </ion-content>
         </ion-view>
     </script>
-    <script id="new.html" type="text/ng-template">
-        <!-- The title of the ion-view will be shown on the navbar -->
-        <ion-view title="Novo Contato">
-            <ion-nav-bar class="bar-stable">
-                <ion-header-bar class="bar-stable">
-                    <h1 class="title">Novo Contato</h1>
-                </ion-header-bar>
-                <ion-nav-back-button class="button-clear" ng-click="goBack()">
-                    <i class="icon ion-arrow-left-c"></i>
-                </ion-nav-back-button>
-            </ion-nav-bar>
-            <ion-content>
-                <form ng-submit="createContact(contact)">
-                    <div class="list" style="margin:0 auto; padding-left: 25px; padding-right: 25px; ">
-                        Nome:
-                        <input type="text" name="fname" ng-model="contact.nome" placeholder="Nome" required>
-                        <br> E-mail:
-                        <input type="email" name="email" ng-model="contact.email" placeholder="Email" required>
-                        <br> Telefone
-                        <input type="number" name="telefone" ng-model="contact.telefone" placeholder="Telefone" required>
-                        <br>
-                    </div>
-                    <div class="padding">
-                        <button type="submit" class="button button-block button-positive">Criar Contato</button>
-                    </div>
-                </form>
-            </ion-content>
-        </ion-view>
-    </script>
-    <script id="edit.html" type="text/ng-template">
-        <!-- The title of the ion-view will be shown on the navbar -->
-        <ion-view title="Editar Contato">
-            <ion-nav-bar class="bar-stable">
-                <ion-header-bar class="bar-stable">
-                    <h1 class="title">Editar Contato</h1>
-                </ion-header-bar>
-                <ion-nav-back-button class="button-clear" ng-click="goBack()">
-                    <i class="icon ion-arrow-left-c"></i>
-                </ion-nav-back-button>
-            </ion-nav-bar>
-            <ion-content>
-                <form ng-submit="editContact(contact)">
-                    <div class="list" style="margin-top:50px">
-                        Nome:
-                        <input type="text" name="fname" ng-model="contact.nome" placeholder="Nome">
-                        <br> E-mail:
-                        <input type="text" name="email" ng-model="contact.email" placeholder="Email">
-                        <br> Telefone
-                        <input type="number" name="telefone" ng-model="contact.telefone" placeholder="Telefone">
-                        <br>
-                    </div>
-                    <div class="padding">
-                        <button type="submit" class="button button-block button-positive">Salvar</button>
-                    </div>
-                </form>
-            </ion-content>
-        </ion-view>
-    </script>
+    
 </body>
 
 </html>
