--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
     <link href="css/style.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/lodash/dist/lodash.js"></script>
     <script src="cordova.js"></script>
     <script src="js/app.js"></script>
 </head>
