Carregar contatos na inicialização

--- a/www/index.html
+++ b/www/index.html
@@ -17,11 +17,9 @@
 <body>
     <ion-nav-view class="slide-left-right"></ion-nav-view>
     <script id="index.html" type="text/ng-template">
-        <!-- The title of the ion-view will be shown on the navbar -->
         <ion-view title="Contatos" hide-back-button="true" class="padding">
             <ion-header-bar class="bar-stable">
-                <button class="button" ng-click="getContactList()">Load</button>
-                <h1 class="title">Contatos</h1>
+                <h1 class="title text-center">Contatos</h1>
                 <a class="button button-icon icon ion-plus-round" ui-sref="new"></a>
             </ion-header-bar>
             <ion-content>
