Correção - Nome do App

--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
     <script id="index.html" type="text/ng-template">
         <ion-view title="Contatos" hide-back-button="true" class="padding">
             <ion-header-bar class="bar-stable">
-                <h1 class="title text-center">Contatos</h1>
+                <h1 class="title text-center">GAMAgenda</h1>
                 <a class="button button-icon icon ion-plus-round" ui-sref="new"></a>
             </ion-header-bar>
             <ion-content>
